Fix the bug that the min-height too much on channel page

--- a/pages/channel.scss
+++ b/pages/channel.scss
@@ -25,7 +25,7 @@
   		justify-content: center;
   		padding: 0;
   		margin: 0;
-      min-height: 50vw;
+      min-height: 35vw;
   		img {
   			width: 100%;
   		}
